# WOSS - World Ocean Simulation System -
# 
# Copyright (C) 2009 Federico Guerra 
# and regents of the SIGNET lab, University of Padova
# 
# Author: Federico Guerra - federico@guerra-tlc.com
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation;
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

# This software has been developed by Federico Guerra
# and SIGNET lab, University of Padova, 
# in collaboration with the NATO Centre for Maritime Research 
# and Experimentation (http://www.cmre.nato.int ; 
# E-mail: pao@cmre.nato.int), 
# whose support is gratefully acknowledged.


EXTRA_DIST = BTech_BT_1RCL_20kHz.png BTech_BT_1RCL_20kHz.eps \
             BTech_BT_1RCL_25kHz.eps BTech_BT_1RCL_25kHz.png BTech_BT_1RCL_30kHz.eps \
             BTech_BT_1RCL_30kHz.png BTech_BT_25UF_20kHz.eps BTech_BT_25UF_20kHz.png BTech_BT_25UF_25kHz.eps \
             BTech_BT_25UF_25kHz.png BTech_BT_25UF_30kHz.eps BTech_BT_25UF_30kHz.png BTech_BT_2RCL_20kHz.eps \
             BTech_BT_2RCL_20kHz.png BTech_BT_2RCL_25kHz.eps BTech_BT_2RCL_25kHz.png BTech_BT_2RCL_30kHz.eps \
             BTech_BT_2RCL_30kHz.png ITC_ITC_2003_5kHz.eps ITC_ITC_2003_5kHz.png ITC_ITC_2010_2kHz.eps \
             ITC_ITC_2010_2kHz.png ITC_ITC_2015_2kHz.eps ITC_ITC_2015_2kHz.png ITC_ITC_2044_10kHz.eps \
             ITC_ITC_2044_10kHz.png ITC_ITC_2062_0.44kHz.png ITC_ITC_2062_440Hz.eps ITC_ITC_3001_17.5kHz.png \
             ITC_ITC_3001_17500Hz.eps ITC_ITC_3013_10kHz.eps ITC_ITC_3013_10kHz.png ITC_ITC_3148_8kHz.eps \
             ITC_ITC_3148_8kHz.png ITC_ITC_3167_10kHz.eps ITC_ITC_3167_10kHz.png ITT_SB31CT_10kHz.eps \
             ITT_SB31CT_10kHz.png Neptune_T186_17kHz.eps Neptune_T186_17kHz.png Neptune_T204_54kHz.eps \
             Neptune_T204_54kHz.png Neptune_T216_58kHz.eps Neptune_T216_58kHz.png Neptune_T217_25kHz.eps \
             Neptune_T217_25kHz.png Neptune_T218_22kHz.eps Neptune_T218_22kHz.png Neptune_T54_13kHz.eps \
             Neptune_T54_13kHz.png RESON_TC1026_36kHz.eps RESON_TC1026_36kHz.png bellhop_August.eps \
             bellhop_August.gif bellhop_March.eps bellhop_March.gif bezier_BT_1RCL.eps bezier_BT_1RCL.png \
             bezier_BT_25UF.eps bezier_BT_25UF.png bezier_BT_2RCL.eps bezier_BT_2RCL.png bezier_ITC_2003.eps \
             bezier_ITC_2003.png bezier_ITC_2010.eps bezier_ITC_2010.png bezier_ITC_2015.eps bezier_ITC_2015.png \
             bezier_ITC_2044.eps bezier_ITC_2044.png bezier_ITC_2062.eps bezier_ITC_2062.png bezier_ITC_3001.eps \
             bezier_ITC_3001.png bezier_ITC_3013.eps bezier_ITC_3013.png bezier_ITC_3148.eps bezier_ITC_3148.png \
             bezier_ITC_3167.eps bezier_ITC_3167.png bezier_ITT_SB31CT.eps bezier_ITT_SB31CT.png \
             bezier_Neptune_T186.eps bezier_Neptune_T186.png bezier_Neptune_T204.eps bezier_Neptune_T204.png \
             bezier_Neptune_T216.eps bezier_Neptune_T216.png bezier_Neptune_T217.eps bezier_Neptune_T217.png \
             bezier_Neptune_T218.eps bezier_Neptune_T218.png bezier_Neptune_T54.eps bezier_Neptune_T54.png \
             bezier_RESON_TC1026.eps bezier_RESON_TC1026.png msq10d.eps msq10d.gif msqsub.eps msqsub.gif \
	     altimetry_bret_T1.eps altimetry_bret_T1.png woss_db_diagram.eps woss_db_diagram.gif


