# WOSS - World Ocean Simulation System -
# 
# Copyright (C) 2009 Federico Guerra 
# and regents of the SIGNET lab, University of Padova
# 
# Author: Federico Guerra - federico@guerra-tlc.com
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation;
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

# This software has been developed by Federico Guerra
# and SIGNET lab, University of Padova, 
# in collaboration with the NATO Centre for Maritime Research 
# and Experimentation (http://www.cmre.nato.int ; 
# E-mail: pao@cmre.nato.int), 
# whose support is gratefully acknowledged.


EXTRA_DIST =    woss-db.h woss-db.cpp woss-db-creator.h woss-db-creator.cpp \
		bathymetry-gebco-db.h bathymetry-gebco-db.cpp \
		bathymetry-utm-csv-db.h bathymetry-utm-csv-db.cpp \
		bathymetry-gebco-db-creator.h bathymetry-gebco-db-creator.cpp \
		bathymetry-utm-csv-db-creator.h bathymetry-utm-csv-db-creator.cpp \
		ssp-woa2005-db.h ssp-woa2005-db.cpp \
		ssp-woa2005-db-creator.h ssp-woa2005-db-creator.cpp \
		sediment-deck41-db-logic-control.h sediment-deck41-db-logic-control.cpp \
		sediment-deck41-db.h sediment-deck41-db.cpp \
		sediment-deck41-db-creator.h sediment-deck41-db-creator.cpp \
		sediment-deck41-coord-db.h sediment-deck41-coord-db.cpp \
		sediment-deck41-marsden-one-db.h sediment-deck41-marsden-one-db.cpp \
		sediment-deck41-marsden-db.h sediment-deck41-marsden-db.cpp \
		res-time-arr-txt-db.h res-time-arr-txt-db.cpp \
		res-time-arr-txt-db-creator.h res-time-arr-txt-db-creator.cpp \
		res-time-arr-bin-db.h res-time-arr-bin-db.cpp \
		res-time-arr-bin-db-creator.h res-time-arr-bin-db-creator.cpp \
		res-pressure-txt-db.h res-pressure-txt-db.cpp \
		res-pressure-txt-db-creator.h res-pressure-txt-db-creator.cpp \
		res-pressure-bin-db.h res-pressure-bin-db.cpp \
		res-pressure-bin-db-creator.h res-pressure-bin-db-creator.cpp \
		woss-db-manager.h woss-db-manager.cpp woss-db-custom-data-container.h  
