# WOSS - World Ocean Simulation System -
# 
# Copyright (C) 2009 Federico Guerra 
# and regents of the SIGNET lab, University of Padova
# 
# Author: Federico Guerra - federico@guerra-tlc.com
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License version 2 as
# published by the Free Software Foundation;
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA

# This software has been developed by Federico Guerra
# and SIGNET lab, University of Padova, 
# in collaboration with the NATO Centre for Maritime Research 
# and Experimentation (http://www.cmre.nato.int ; 
# E-mail: pao@cmre.nato.int), 
# whose support is gratefully acknowledged.


EXTRA_DIST =    altimetry-definitions-tcl.cpp altimetry-definitions-tcl.h \
		bathymetry-gebco-db-creator-tcl.cpp bathymetry-gebco-db-creator-tcl.h \
		bathymetry-utm-csv-db-creator-tcl.cpp \
		bathymetry-utm-csv-db-creator-tcl.h \
		bellhop-creator-tcl.cpp bellhop-creator-tcl.h \
		definitions-handler-tcl.cpp definitions-handler-tcl.h \
		pressure-definitions-tcl.cpp pressure-definitions-tcl.h \
		random-generator-definitions-tcl.cpp random-generator-definitions-tcl.h \
		res-pressure-bin-db-creator-tcl.cpp res-pressure-bin-db-creator-tcl.h \
		res-pressure-txt-db-creator-tcl.cpp res-pressure-txt-db-creator-tcl.h \
		res-time-arr-bin-db-creator-tcl.cpp res-time-arr-bin-db-creator-tcl.h \
		res-time-arr-txt-db-creator-tcl.cpp res-time-arr-txt-db-creator-tcl.h \
		sediment-deck41-db-creator-tcl.cpp sediment-deck41-db-creator-tcl.h \
		sediment-definitions-tcl.cpp sediment-definitions-tcl.h \
		ssp-definitions-tcl.cpp ssp-definitions-tcl.h \
		ssp-time-evo-db-creator-tcl.cpp ssp-time-evo-db-creator-tcl.h \
		ssp-woa2005-db-creator-tcl.cpp ssp-woa2005-db-creator-tcl.h \
		time-arrival-definitions-tcl.cpp time-arrival-definitions-tcl.h \
		time-definitions-tcl.cpp time-definitions-tcl.h \
		transducer-definitions-tcl.cpp transducer-definitions-tcl.h \
		transducer-handler-tcl.cpp transducer-handler-tcl.h \
		woss-controller-tcl.cpp woss-controller-tcl.h \
		woss-db-manager-tcl.cpp woss-db-manager-tcl.h \
		woss-manager-simple-tcl.cpp woss-manager-simple-tcl.h \
		woss-utilities-tcl.cpp woss-utilities-tcl.h 


